--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "dependencies": {
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  }
+    "scripts": {
+        "dev": "next dev"
+    },
+    "dependencies": {
+        "next": "^12.1.5",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    }
 }
