--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -6,8 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "sass": "^1.50.0",
+    "tailwindcss": "^3.0.24"
   }
 }
